// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerProvider Nested Banner Checkpoint registers banner with top-level Banner Checkpoint 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            />
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider Nested Banner Checkpoint registers banner with top-level Banner Checkpoint 2`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        data-testid="rendered-banner"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            />
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider Nested Banner Checkpoint registers banner with top-level Banner Checkpoint 3`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        data-testid="rendered-banner"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            >
              <div
                class="alert-base error narrow"
                data-testid="rendered-banner"
                role="alert"
              >
                <div
                  class="body body-std"
                >
                  <span
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="tui-Icon icon IconError"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                        fill="#E50000"
                      />
                      <path
                        d="M7 21.5h34v5H7v-5z"
                        fill="#FFF"
                      />
                    </svg>
                  </span>
                  <div
                    class="section"
                  >
                    <strong
                      class="title"
                    >
                      <span>
                        Error.
                      </span>
                    </strong>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider Nested Banner Checkpoint unregisters banner with top-level Banner Checkpoint 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        data-testid="rendered-banner"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            >
              <div
                class="alert-base error narrow"
                data-testid="rendered-banner"
                role="alert"
              >
                <div
                  class="body body-std"
                >
                  <span
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="tui-Icon icon IconError"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                        fill="#E50000"
                      />
                      <path
                        d="M7 21.5h34v5H7v-5z"
                        fill="#FFF"
                      />
                    </svg>
                  </span>
                  <div
                    class="section"
                  >
                    <strong
                      class="title"
                    >
                      <span>
                        Error.
                      </span>
                    </strong>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider Nested Banner Checkpoint unregisters banner with top-level Banner Checkpoint 2`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            >
              <div
                class="alert-base error narrow"
                data-testid="rendered-banner"
                role="alert"
              >
                <div
                  class="body body-std"
                >
                  <span
                    class="icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="tui-Icon icon IconError"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 48 48"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                        fill="#E50000"
                      />
                      <path
                        d="M7 21.5h34v5H7v-5z"
                        fill="#FFF"
                      />
                    </svg>
                  </span>
                  <div
                    class="section"
                  >
                    <strong
                      class="title"
                    >
                      <span>
                        Error.
                      </span>
                    </strong>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider Nested Banner Checkpoint unregisters banner with top-level Banner Checkpoint 3`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
          <div
            class="content-container-fill"
          >
            <div
              class="header"
            />
            <div
              class="main"
            >
              <div
                class="scroll normalizer"
              >
                <div>
                  <button
                    data-testid="show-2nd-banner"
                    type="button"
                  >
                    Toggle Banner
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider registerBanner registers banner when rendered after mount 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider registerBanner registers banner when rendered after mount 2`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        data-testid="rendered-banner"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider renders with children 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      />
    </div>
  </div>
</div>
`;

exports[`BannerProvider renders with children 2`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          child
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider renders with children that has a an banner 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider unregistersBanner unregisters banner when id is provided 1`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    >
      <div
        class="alert-base error narrow"
        data-testid="rendered-banner"
        role="alert"
      >
        <div
          class="body body-std"
        >
          <span
            class="icon"
          >
            <svg
              aria-hidden="true"
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </span>
          <div
            class="section"
          >
            <strong
              class="title"
            >
              <span>
                Error.
              </span>
            </strong>
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerProvider unregistersBanner unregisters banner when id is provided 2`] = `
<div>
  <div
    class="content-container-fill"
  >
    <div
      class="header"
    />
    <div
      class="main"
    >
      <div
        class="scroll normalizer"
      >
        <div>
          <button
            data-testid="show-banner"
            type="button"
          >
            Toggle Banner
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
